Fixed phantom regions